# serializer version: 1
# name: test_error_item_json
  '{"id":"test_id","type":"error","message":"test message"}'
# ---
# name: test_item_completed_json
  '{"type":"item.completed","item":{"id":"error1","type":"error","message":"An error occurred"}}'
# ---
